# vercel-poetry-test

./: .gitignore  package.json  pnpm-lock.yaml  poetry.toml  pyproject.toml  requirements.txt  vercel.json
api/: main.py
common/: constants.py
vercel-scripts/: build.js
